--- a/libs/tailwindcss/tailwind.css
+++ b/libs/tailwindcss/tailwind.css
@@ -649,6 +649,10 @@ video {
   margin-top: 2rem;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -730,6 +734,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
